did_some_designing

--- a/style.css
+++ b/style.css
@@ -19,10 +19,11 @@
 }
 
 #table {
-	border-collapse: collapse;
+	
 	
 	font: 20px;
-	background: gainsboro;
+	background: #CDC1B4;
 }
-
-
+#first{
+border-top-left-radius: 10px;
+}
