--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #table td{
-	height: 150px;
-	width: 150px;
+	height: 130px;
+	width: 130px;
     font-size:40px;
     text-align: center;
 	padding: 10px;
@@ -31,6 +31,15 @@ border-top-left-radius: 10px;
 #back{
 	    width: 200px;
     height: 100px;
+    margin: 10;
+    text-align: center;
+    border-radius: 10px;
+        border: 5px solid grey;
+        background: #BBADA0
+}
+#back2{
+	    width: 150px;
+    height: 70px;
     margin: 10;
     text-align: center;
     border-radius: 10px;
