--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 #table td{
 	height: 130px;
 	width: 130px;
@@ -5,8 +6,6 @@
     text-align: center;
 	padding: 10px;
 	border: 8px solid grey;
-	
-
 }
 
 #table tr {
@@ -15,46 +14,45 @@
 	font-size:40px;
     text-align: center;
 	border: 8px solid grey;
-	
 }
 
 #table {
-	
 	border-radius: 20px;
 	font: 20px;
 	background: #CDC1B4;
 }
+
 #first{
-border-top-left-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
 #back{
-	    width: 200px;
+	width: 200px;
     height: 100px;
     margin: 10;
     text-align: center;
     border-radius: 10px;
-        border: 5px solid grey;
-        background: #BBADA0
+    border: 5px solid grey;
+    background: #BBADA0;
 }
-#back2{
-	    width: 150px;
+#back2, #show-game-over{
+    width: 150px;
     height: 70px;
     margin: 10;
     text-align: center;
     border-radius: 10px;
-        border: 5px solid grey;
-        background: #BBADA0
+    border: 5px solid grey;
+    background: #BBADA0;
+}
+
+#show-game-over{
+    display: none;
 }
 
 #keys .k{
 	height: 50px;
-	
     font-size:30px;
     text-align: center;
-	padding: 10px;
-	border: 8px solid grey;
-
-
+    padding: 10px;
+    border: 8px solid grey;
 }
-
