--- a/style.css
+++ b/style.css
@@ -1,23 +1,19 @@
 #table td{
 	height: 130px;
 	width: 130px;
-    font-size:40px;
-    text-align: center;
+	font-size:40px;
+	text-align: center;
 	padding: 10px;
 	border: 8px solid grey;
-	
-
 }
-
 #table tr {
 	margin: 0px;
 	padding: 10px;
 	font-size:40px;
-    text-align: center;
+	text-align: center;
 	border: 8px solid grey;
 	
 }
-
 #table {
 	
 	border-radius: 20px;
@@ -25,36 +21,88 @@
 	background: #CDC1B4;
 }
 #first{
-border-top-left-radius: 10px;
+	border-top-left-radius: 10px;
 }
-
-#back{
-	    width: 200px;
-    height: 100px;
-    margin: 10;
-    text-align: center;
-    border-radius: 10px;
-        border: 5px solid grey;
-        background: #BBADA0
-}
-#back2{
-	    width: 150px;
-    height: 70px;
-    margin: 10;
-    text-align: center;
-    border-radius: 10px;
-        border: 5px solid grey;
-        background: #BBADA0
-}
-
 #keys .k{
 	height: 50px;
 	
-    font-size:30px;
-    text-align: center;
+	font-size:30px;
+	text-align: center;
 	padding: 10px;
 	border: 8px solid grey;
-
-
 }
-
+#header{
+	text-align: -webkit-center;  
+}
+#title{
+	font-size: 60px;
+	color: grey;
+	padding: 10px;
+	margin-bottom: 15px;
+	font-weight: bold;
+}
+#game-status{
+	display: inline-flex;
+    align-items: center;
+    margin-right: 100px;
+}
+#score{
+    font-size: 33px;
+    text-align: center;
+    color: white;
+    font-family: sans-serif;
+}
+#reload{
+    font-size: 33px;
+    text-align: center;
+    color: white;
+    font-family: sans-serif;
+}
+#game{
+	display: flex;
+    align-items: center;
+    /* margin-left: 307px; */
+    justify-content: center;
+}
+#game-board{
+	padding: 18px;
+}
+#top-left-corner{
+	border-top-left-radius: 20px;
+}
+#top-right-corner{
+	border-top-right-radius: 20px;
+}
+#bottom-left-corner{
+	border-bottom-left-radius: 20px;
+}
+#bottom-right-corner{
+	border-bottom-right-radius: 20px;
+}
+#controls{
+	padding: 30px;
+}
+#footer{
+	display: flex ; 
+	justify-content: center;
+}
+#footer-text{
+	font-size: 25px;
+    text-align: end;
+    color: gray;
+    font-family: sans-serif;
+    padding: 10px;
+}
+.status-box{
+	width: 200px;
+	height: 100px;
+	margin: 10;
+	text-align: center;
+	border-radius: 10px;
+	border: 5px solid grey;
+	background: #BBADA0
+}
+.arrow{
+	width: 40px;
+    height: 40px;
+}
